# wuw-linux

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.operator_model  Readme.md
models/: vad.svm
scripts/: build_operator_model.js  gen_fef.js  package.json
scripts/archive/: evaluate_original_model.js  score_original_hmm_features.js
scripts/operator/: build_svm_training_input.js  check.js  config.js  create_hmm_training_list_files.js  create_list_files.js  evaluate_model.js  evaluate_svm.js  gen_empty_hmm.js  gen_fef_file_single.js  gen_fef_files.js  score_hmm_features.js  train_hmm_features.js  train_svm.js
src/: WUWConfig.h.in  audio_stream.cpp  audio_stream.h  process_in_samples.cpp  process_in_samples.h  run_gen_fef.cpp  run_gen_hmm.cpp  run_wuw.cpp  train_hmm.cpp  ulaw_table.h
src/back_end/: CMakeLists.txt  back_end.cpp  back_end.h
src/back_end/hmm/: hmm.h  hmm_network.cpp  hmm_test.cpp  hmm_util.cpp
src/back_end/svm/: svm.cpp  svm.h
src/common/: CMakeLists.txt  defines.h  ml_gmm.cpp  ml_gmm.h  win32types.h  wuw_common.h  wuw_config.cpp  wuw_config.h  wuw_io.cpp  wuw_io.h  wuw_util.cpp  wuw_util.h
src/front_end/: CMakeLists.txt  front_end.cpp  front_end.h
src/front_end/buffer/: delay.cpp  delay.h
src/front_end/enh/: enh.cpp  enh.h
src/front_end/mfcc/: dct.cpp  dct.h  log.cpp  log.h  mel_filter.cpp  mel_filter.h  mfcc.cpp  mfcc.h
src/front_end/spectrum/: advance_window.cpp  advance_window.h  dc_offset.cpp  dc_offset.h  fft.cpp  fft.h  fftsg.h  fio.h  lpc.cpp  lpc.h  pre_emphasis.cpp  pre_emphasis.h  spectrum.cpp  spectrum.h  time_smooth.cpp  time_smooth.h  window.cpp  window.h
src/front_end/vad/: vad.cpp  vad.h
